<resources>
    <string name="app_name">Healing Fitness</string>
    <string name="exerciseForSpine">Упражнения для позвоночника</string>
    <string name="exerciseForСervical">Шейный отдел</string>
    <string name="exerciseForThoracic">Грудной отдел</string>
    <string name="exerciseForLumbar">Поясничный отдел</string>

    <string name="exerciseForHand">Упражнения для рук</string>
    <string name="exerciseForShoulder">Плечевой сустав</string>
    <string name="exerciseForElbow">Локтевой сустав</string>
    <string name="exerciseForBrush">Кисть</string>

    <string name="exerciseForFoot">Упражнения для ног</string>
    <string name="exerciseForHip">Тазобедренный сустав</string>
    <string name="exerciseForKnee">Коленный сустав</string>
    <string name="exerciseForAnkle">Голеностопный сустав</string>

    <string name="favorite">Избранное</string>
    <string name="appName">ЛФК в домашних условиях</string>

    <!-- Упражнения для ног -->
    <string name="ex1forHip">Исходное положение – стоя. Одну ногу поставьте на невысокую подставку, рукой обопритесь на стул.
        Другой ногой выполняйте махи вперед и назад, постепенно наращивая амплитуду.
        Выполните 15 раз и поменяйте ноги.
    </string>
    <string name="ex2forHip">Исходное положение – лежа на спине. Согните обе ноги в коленях до максимума, не отрывая стопы от пола.
        Разводите и сводите колени, постепенно наращивая амплитуду движений. Повторите 10–15 раз.
    </string>
    <string name="ex3forHip">Исходное положение – Сидя на полу, ноги прямые в коленом суставе, пятки вместе, спина прямая.
        Медленно наклоняйтесь вперёд, тянитесь руками к стопам, стараясь коснуться пальцами рук, пальцев ног.
        Спина прямая! Колени от пола не отрывать! Выполнить 10 наклонов вперёд, каждый наклон под счёт 8 секунд.
    </string>


    <string name="ex1forKnee">Исходное положение: лёжа на животе, ноги выпрямлены в коленном суставе, руки расположить вдоль тела. Медленно поднимаем ногу пяткой вверх, со сгибанием от 45-90 градусов в коленном суставе и фиксируем в этой позиции на 5-8 секунд.
        Опустите ногу в исходное положение. Выполняем каждой ногой по 8-10 раз.
    </string>
    <string name="ex2forKnee">Исходное положение – основная стойка, ноги на ширине плеч, придерживаясь за спинку стула.
                       Медленно выполнить сгибание ноги в коленном суставе, отводя пятку назад-вверх, до угла в 90 градусов. Бедро не отводить!
        Опустить в исходное положение.
    </string>
    <string name="ex3forKnee">Исходное положение – основная стойка прислонится спиной к стене, ноги на ширине плеч.
                       Медленно выполнить приседание, опереться спиной к стене, пятки от пола не отрывать, руки вдоль тела.
                       Зафиксировать в удобном для себя положении тела и удерживать в течение 30 секунд.
                       Вернуться в исходное положение.
                       Кол-во повторений 3 раза,по 30-40 секунд – статической позы.
    </string>


    <string name="ex1forAnkle">Исходное положение: лёжа на животе, ноги выпрямлены в коленном суставе, руки расположить вдоль тела. Медленно поднимаем ногу пяткой вверх, со сгибанием от 45-90 градусов в коленном суставе и фиксируем в этой позиции на 5-8 секунд.
        Опустите ногу в исходное положение. Выполняем каждой ногой по 8-10 раз.
    </string>
    <string name="ex2forAnkle">Исходное положение – основная стойка, ноги на ширине плеч, придерживаясь за спинку стула.
                       Медленно выполнить сгибание ноги в коленном суставе, отводя пятку назад-вверх, до угла в 90 градусов. Бедро не отводить!
        Опустить в исходное положение.
    </string>
    <string name="ex3forAnkle">Исходное положение – основная стойка прислонится спиной к стене, ноги на ширине плеч.
                       Медленно выполнить приседание, опереться спиной к стене, пятки от пола не отрывать, руки вдоль тела.
                       Зафиксировать в удобном для себя положении тела и удерживать в течение 30 секунд.
                       Вернуться в исходное положение.
                       Кол-во повторений 3 раза,по 30-40 секунд – статической позы.
    </string>

    <string name="ex1forBrush">Выпрямляйте пальцы и разводите их в стороны, пока не почувствуете напряжения. Подержите 10 секунд и расслабьтесь.
    </string>
    <string name="ex2forBrush">Вытянув руки перед собой, выгибайте кисти рук пальцами вверх. Так вы растянете мышцы передней поверхности предплечий. Держите 10-12 секунд. Повторите два раза. Затем согните кисти пальцами вниз, чтобы растянуть мышцы тыльной поверхности предплечий. Держите 10-12 секунд. Повторите дважды.</string>
    <string name="ex3forBrush">Сидя на стуле, руки на коленях ладонями вниз, так, что бы ладони свисали. Возьмите небольшой утяжелитель (гантели, мяч) и зажмите его в ладонях. Не отрывая рук от ног, поднимите, утяжелитель максимально вверх и опустите. Повторите 12 раз по 3 похода.</string>

    <string name="ex1forElbow">Плечо на столе, предплечье направлено вертикально вверх. Сгибание и разгибание в локтевом суставе, поддерживая кистью здоровой руки предплечье поврежденной. Повторить 10 раз.</string>
    <string name="ex2forElbow">Исходное положение – Основная стойка, руки в стороны. Выполнит круговые движения кистями рук, локоть не опускает и не поднимаем, не отводим. Выполнить по 10 вращений в каждую сторону. (По часовой стрелке и против часовой).</string>
    <string name="ex3forElbow">Исходное положение – сидя на стуле. Возьмите в травмированную руку утяжелитель (гантели) поднимите вверх, свободной рукой придерживайте больную руку за локоть. Выполните сгибание руки в локте, отводя ей за голову, коснитесь утяжелителем противоположного плеча. Вернитесь в исходное положение</string>

    <string name="ex1forShoulder">Сидя на стуле, ладони на талии, развести локти в стороны. Медленно поднимать плечи до предела вверх, слегка втягивая при этом голову и медленно опустить их.</string>
    <string name="ex2forShoulder">Сидя на стуле или табуретке, завести больную руку за спину, насколько возможно. За спиной захватить её здоровой рукой за запястье и тянуть к противоположной ягодице насколько это возможно до появления боли. Удерживайте 5 секунд. Повторять 10 раз</string>
    <string name="ex3forShoulder">Исходное положение: лёжа на полу, руки вдоль тела. Через стороны, поднять здоровую руки вверх – вернуть в исходное положение. Больную руку через сторону поднять вверх – вернуть в исходное положение. Повторить по 10 раз на каждую руку</string>

    <string name="ex1forCervical"> Исходное положение – основная стойка, ноги на ширине плеч. Одной рукой медленно отклоняйте голову в сторону, другую руку заведите за спину повторяем так 10 раз, с задержкой в 3 секунды
    </string>
    <string name="ex2forCervical"> Исходное положение – основная стойка, ноги на ширине плеч. Наклоните голову вперед, удерживайте 3 секунды, после этого отведите шею назад, тоже самое удерживайте 3 секунды, повторите так еще 9 раз, главное помним, без резких движений делаем медленно</string>
    <string name="ex3forCervical"> Исходное положение – основная стойка, ноги на ширине плеч. Медленно поворачиваем влево, удерживаем три секунды, тоже самое и в правую сторону - 10 повторений.</string>

    <string name="ex1forLumbar">Встаньте на четвереньки, прогибаемся в спине, делая вход, далее выгибаем спину, делаем выдох, делаем так 15 повторений</string>
    <string name="ex2forLumbar">Встаньте на четвереньки, тянем правую руку вперед, одновременно тянет левую ногу назад, удерживаем 3 секунду,  меняем руку и ногу, делаем таких 10 повторений.</string>
    <string name="ex3forLumbar">Лёжа на спине с согнутыми в коленях ногами. Ноги прижать к груди руками, потянуть на себя, слегка оторвав поясницу, удерживаем 3 секунды, таких 10 повторений</string>

    <string name="ex1forThoracic">Встаньте на четвереньки, прогибаемся в спине, делая вход, далее выгибаем спину, делаем выдох, делаем так 15 повторений</string>
    <string name="ex2forThoracic">Встаньте на четвереньки, тянем правую руку вперед, удерживаем 3 секунду,  так же и с левой, рукой, делаем 10 повторений.</string>
    <string name="ex3forThoracic">Лёжа на спине с согнутыми в коленях ногами. Ноги прижать к груди руками, потянуть на себя, слегка оторвав поясницу, удерживаем 3 секунды, таких 10 повторений.
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
