<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonHip"
        android:layout_width="225dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_main_buttons"
        android:text="@string/exerciseForHip"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonKnee"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/buttonKnee"
        android:layout_width="225dp"
        android:layout_height="75dp"
        android:background="@drawable/rectangle_main_buttons"
        android:text="@string/exerciseForKnee"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAnkle"
        android:layout_width="225dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_main_buttons"
        android:text="@string/exerciseForAnkle"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonKnee" />

</androidx.constraintlayout.widget.ConstraintLayout>